--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -18,7 +18,6 @@ jobs:
       fail-fast: false
       matrix:
         version:
-#           - '1.6'
           - '1.8'
           - 'nightly'
         os:
@@ -40,3 +39,28 @@ jobs:
       - uses: codecov/codecov-action@v2
         with:
           files: lcov.info
+  
+  docs:
+      name: Documentation
+      runs-on: ubuntu-latest
+      steps:
+        - uses: actions/checkout@v2
+        - uses: julia-actions/setup-julia@v1
+          with:
+            version: "1.8"
+        - uses: julia-actions/julia-buildpkg@latest
+        - run: |
+            julia --project=docs -e '
+              using Pkg
+              Pkg.develop(PackageSpec(path=pwd()))
+              Pkg.instantiate()'
+        - run: |
+            julia --project=docs -e '
+              using Documenter: DocMeta, doctest
+              using MetX
+              DocMeta.setdocmeta!(MetX, :DocTestSetup, :(using MetX); recursive=true)
+              doctest(MetX)'
+        - run: julia --project=docs docs/make.jl
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            DOCUMENTER_KEY: ${{ secrets.DOCUMENTER_KEY }}
