--- a/Project.toml
+++ b/Project.toml
@@ -5,6 +5,7 @@ version = "0.1.5"
 
 [deps]
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+Gurobi = "2e9cd046-0924-5485-92f1-d5272153d98b"
 MetXBase = "0b8c4419-604a-4c8e-9eed-0f79de4a140e"
 MetXCultureHub = "c8a5ff98-18da-494d-98cc-f2d3bae7da4c"
 MetXEP = "3facea42-c6d8-46ab-8896-2657a92d9f87"
